<resources>
    <string name="app_name">SocialMediaApp</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="register_here">Register here!</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="caption">Caption</string>
    <string name="upload_post">Upload Post</string>
    <string name="select_image">Select Image</string>
    <string name="profile">Profile</string>
    <string name="biography">Biography</string>
    <string name="bio">Bio</string>
</resources>