<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="10dp"/>


    <EditText
        android:id="@+id/caption_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/caption"
        android:minHeight="48dp"/>


    <Button
        android:id="@+id/select_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image"/>


    <Button
        android:id="@+id/upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_post"
        android:layout_marginTop="20dp"/>
</LinearLayout>